Fix issue where disabled indicator would overlap text.

--- a/src/stylesheets/partials/_base.sass
+++ b/src/stylesheets/partials/_base.sass
@@ -131,7 +131,10 @@ em
   input
     &[type=time]
       text-align: center
-
+    &[type=time]::-webkit-clear-button,
+    &[type=time]::-moz-clear-button,
+    &[type=time]::clear-button
+      display: none
   &.set
     border-color: transparent
 
